# mdsanima-cli

./: .commitlintrc  .commitlintrc.mjs  .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .prettierrc  .pylintrc  .versionrc  .yamllint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  manifest.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yaml  dependabot.yaml  labels.yaml
.github/workflows/: commitlint.yaml  labeler.yaml
docs/en/: .gitkeep
mdsanima_cli/: __init__.py  __main__.py
mdsanima_cli/commands/: check.py  number.py  resize.py  thumbnail.py
mdsanima_cli/core/: __init__.py
mdsanima_cli/core/cli/: __init__.py  command.py  config.py  formatter.py  parser.py
mdsanima_cli/core/cmd/: __init__.py  check.py  gifmaker.py  grid.py  ico.py  jpg.py  logo.py  number.py  pixelart.py  png.py  resize.py  thumbnail.py  uuid.py  watermark.py  webp.py
mdsanima_cli/core/common/: __init__.py
mdsanima_cli/core/enums/: __init__.py  auto.py  color.py  target.py
mdsanima_cli/core/helpers/: __init__.py
mdsanima_cli/core/utils/: __init__.py
mdsanima_cli/utils/: ascii.py
scripts/: rename-git-tag.sh
src/mdsanima_cli/: __init__.py  __main__.py  ascii.py  cli_check.py  cli_grid.py  cli_jpg.py  cli_logo.py  cli_number.py  cli_pixelart.py  cli_png.py  cli_uuid.py  cli_watermark.py  cli_webp.py  exif.py  mprints.py  parser.py  pixelart.py  utils.py
src/mdsanima_cli/command/: check.py  gifmaker.py  grid.py  jpg.py  logo.py  number.py  pixelart.py  png.py  resize.py  thumbnail.py  uuids.py  watermark.py  webp.py
src/mdsanima_cli/commands/: __init__.py  gifmaker.py  grid.py  jpg.py  logo.py  number.py  pixelart.py  png.py  resize.py  thumbnail.py  uuids.py  watermark.py  webp.py
src/mdsanima_cli/utils/: ascii.py  exif.py  print.py  stats.py  timer.py
tests/: .gitkeep
