# Configuration file for Python package thats is published on PyPI using Twine.

[build-system]
requires = ["setuptools>=75.2", "wheel>=0.44", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsanima-cli"
dynamic = ["version"]
description = "A command-line tool for image processing, generating pixel art, adding logos to images, and much more"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Marcin Różewski", email = "marcinrozewski@gmail.com" }]
keywords = [
    "bash",
    "cli",
    "command-line",
    "console-app",
    "console-application",
    "exif metadata",
    "exif",
    "image-processing",
    "images",
    "logo",
    "mdsanima command line",
    "mdsanima command-line",
    "mdsanima-cli",
    "mdsanima-dev",
    "mdsanima",
    "meta information",
    "pixel art",
    "pixelart",
    "python-library",
    "python",
    "python3",
    "shell-script",
    "shell",
    "watermark",
    "zsh",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Polish",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Education :: Testing",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Console Fonts",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Logging",
    "Topic :: System :: Operating System",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Topic :: Terminals",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["mdsanima-dev==0.2.0", "piexif==1.1.3", "pillow==11.0.0"]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "build==1.2.1",
    "flake8==7.1.1",
    "ipython==8.28.0",
    "isort==5.13.2",
    "pylint==3.3.1",
    "pytest-cov==5.0.0",
    "pytest==8.3.3",
    "setuptools-scm==8.1.0",
    "setuptools==75.2.0",
    "twine==5.1.1",
    "virtualenv==20.27.0",
    "wheel==0.44.0",
]

[project.urls]
Homepage = "https://github.com/mdsanima-lab/mdsanima-cli/"
Documentation = "https://github.com/mdsanima-lab/mdsanima-cli/#readme"
Repository = "https://github.com/mdsanima-lab/mdsanima-cli.git"
Changelog = "https://github.com/mdsanima-lab/mdsanima-cli/blob/main/CHANGELOG.md"
Tracker = "https://github.com/mdsanima-lab/mdsanima-cli/issues/"

[project.scripts]
mdsanima = "mdsanima_cli:cli"
mds = "mdsanima_cli:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["mdsanima_cli"]
force_single_line = true
lines_before_imports = 2
lines_after_imports = 2
treat_all_comments_as_code = true
extend_skip = [".md", ".json"]

[tool.setuptools.package-dir]
mdsanima_cli = "mdsanima_cli"

[tool.setuptools_scm]
write_to = "mdsanima_cli/_version.py"
